# Read_pdf_LLM

./: .gitingore  README.md  pyproject.toml
app/: __init__.py  create_functions.py  main.py
tests/: test_llm.py
